content update, vulnerability fix

--- a/_data/publications_project-reports.yml
+++ b/_data/publications_project-reports.yml
@@ -52,12 +52,12 @@
 
 - authors: Schwanbeck J, Viviroli D, Schumann A, Weingartner R
   year: 2008
-  title: Prozessbasierte Beurteilung und Einordnung von seltenen Hochwassern
+  title: Beurteilung und Einordnung von seltenen Hochwassern
   report: Projektschlussbericht zu Untersuchungen im Rahmen der Ereignisanalyse Hochwasser 2005 im Auftrag des Bundesamtes für Umwelt (BAFU)
   institution: Geographisches Institut der Universität Bern
   links:
   - url: "https://www.bafu.admin.ch/bafu/de/home/themen/naturgefahren/publikationen-studien/publikationen/ereignisanalyse-hochwasser-2005-analyse-von-prozessen-massnahmen-und-gefahrengrundlagen.html"
-    text: See also synthesis report of 2005 flood in Switzerland
+    text: See also synthesis report on analyses of 2005 flood in Switzerland
     external: Y
 
 - authors: Schwanbeck J, Viviroli D, Weingartner R, Röser I, Trösch J
