nokogiri vulnerabiliy fix / bundle update

--- a/_data/publications_papers-peer-reviewed.yml
+++ b/_data/publications_papers-peer-reviewed.yml
@@ -8,7 +8,7 @@
   pdf: https://www.cell.com/one-earth/fulltext/S2590-3322(21)00236-0#
   openaccess: Y
   mediacoverage:
-  - title: press release (Aalto University, English)
+  - title: Press release (Aalto University, English)
     url: https://www.aalto.fi/en/news/climate-change-threatens-one-third-of-global-food-production
     external: Y
   - title: press release (Aalto University, Finnish)
